Fix overflow main error

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ h1 {
 
 header {
 	width: 100vw;
-	height: 5em;
+	height: 80px;
 	display: flex;
 	flex-direction: row;
 	box-sizing: border-box;
@@ -111,7 +111,7 @@ input {
 	height: 100%;
 	min-width: 150px;
 	max-width: 150px;
-	max-height: calc(100vh - 60px);
+	max-height: calc(100vh - 80px);
 	background-color: white;
 	display: flex;
 	flex-direction: column;
@@ -119,6 +119,7 @@ input {
 	margin: 0;
 	align-items: center;
 }
+
 .menu > a {
 	padding: 20px 50px;
 	height: 100px;
@@ -160,7 +161,7 @@ a {
 main {
 	flex-grow: 1;
 	overflow-y: auto;
-	max-height: calc(100vh - 60px);
+	max-height: calc(100vh - 80px);
 }
 
 .card {
